# sess

./: .gitignore  .wtfm.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN-stale-index.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
contrib/oxmgr/: README.md  sess-index-loop.sh
contrib/systemd/: README.md  sess-index.service  sess-index.timer
src/: cli.rs  indexer.rs  lib.rs  main.rs  model.rs  usage.rs
src/connectors/: claude_code.rs  codex.rs  hermes.rs  mod.rs  opencode.rs  pi_agent.rs
src/search/: index.rs  mod.rs  query.rs  semantic.rs
src/storage/: mod.rs  sqlite.rs
src/storage/migrations/: 001_initial.sql  002_add_embeddings.sql  003_add_usage_events.sql  004_usage_provenance.sql
src/tui/: app.rs  mod.rs  refresh.rs  search.rs  ui.rs
tests/: cli_contract.rs  stale_index.rs
