[package]
name = "session-search"
version = "0.1.1"
edition = "2024"
default-run = "sess"
description = "Local-first search for coding-agent transcripts"
license = "MIT"
repository = "https://github.com/shuv1337/sess"
readme = "README.md"
keywords = ["cli", "search", "transcripts", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "sess"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Storage & Search
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"
blake3 = "1"
regex = "1"

# Connectors
walkdir = "2"
dirs = "5"
base64 = "0.22"
uuid = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Semantic
fastembed = { version = "4", default-features = false, features = ["ort-load-dynamic", "hf-hub"] }

# TUI (phase 2)
ratatui = "0.29"
crossterm = "0.28"

# Parallel processing
rayon = "1"

# Duration parsing for --max-age
humantime = "2.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true